# job-digest

./: .env.example  .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  config.example.json  profile.example.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  feature.md
.github/workflows/: ci.yml
debug/: himalayas.check.py  himalayas.gates.check.py  himalayas.gates.more.check.py  himalayas.raw.dump.py
src/jobdigest/: __main__.py  cli.py  config.py  models.py  registry.py  runner.py
src/jobdigest/adapters/: adzuna.py  base.py  himalayas.py  jobicy.py  remoteok.py  working_nomads.py
src/jobdigest/core/: dedup.py  gates.py  ranking.py  store.py
src/jobdigest/core/scorers/: base.py  freshness.py
src/jobdigest/render/: html.py
src/jobdigest/utils/: dates.py  http.py  location.py  logging.py  rss.py
tests/: test_config.py  test_dedup_store.py  test_gates.py  test_models.py  test_ranking.py  test_render.py  test_runner.py  test_smoke.py
tests/fixtures/: adzuna_jobs.json  himalayas_jobs.json  jobicy_jobs.json  remoteok_jobs.json  working_nomads_jobs.json
tests/test_adapters/: test_adzuna.py  test_himalayas.py  test_jobicy.py  test_remoteok.py  test_working_nomads.py
tests/test_utils/: test_dates.py  test_http.py  test_location.py  test_rss.py
